--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start:dev": "npx nodemon ./src/server.ts"
   },
   "keywords": [],
-  "author": "GEM Code - Solutions",
+  "author": "GEM Code - IT Solutions",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
