--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "GEM Code - IT Solutions",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "prisma": "^5.0.0"
