Set-up: Globals, npm scripts and absolute paths

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "An API for GO EXPLORE",
   "main": "server.js",
   "scripts": {
-    "start:dev": "npx nodemon ./src/server.ts"
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
+    "start:dev": "npm run build && node ./dist/server.js",
+    "start:prod": "npm run build && npx pm2 start ./dist/server.js -i 0",
+    "stop:prod": "npx pm2 stop all"
   },
   "keywords": [],
   "author": "GEM Code - IT Solutions",
@@ -20,6 +24,8 @@
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.7",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   }
 }
