--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
-    "prisma:init": "npx prisma init && npx prisma db pull",
+    "prisma:init": "rm -rf ./prisma && npx prisma init && npx prisma db pull",
     "start:dev": "npm run prisma:init && npm run build && node ./dist/server.js",
     "start:prod": "npm run prisma:init && npm run build && npx pm2 start ./dist/server.js -i 0",
     "stop:prod": "npx pm2 stop all"
@@ -26,7 +26,6 @@
     "pm2": "^5.3.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   }
 }
