--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
     "prisma:clean": "rm -rf ./prisma",
     "prisma:setup": "npm run prisma:clean && npx prisma init && npx prisma db pull && npx prisma generate",
-    "start:dev": "npm run prisma:setup && npm run build && node ./dist/server.js",
+    "start:dev": "npm run build && node ./dist/server.js",
     "start:prod": "npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
     "stop:prod": "npx pm2 stop all"
   },
@@ -17,12 +17,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "argon2": "^0.31.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "prisma": "^5.0.0"
+    "jsonwebtoken": "^9.0.1",
+    "prisma": "^5.0.0",
+    "prisma-error-enum": "^0.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "ts-node": "^10.9.1",
