--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.1",
     "prisma": "^5.0.0",
     "prisma-error-enum": "^0.1.3",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-validation-error": "^1.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
