--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
     "prisma:clean": "rm -rf ./prisma",
     "prisma:setup": "npm run prisma:clean && npx prisma init && npx prisma db pull && npx prisma generate",
-    "start:dev": "npm run build && node ./dist/server.js",
-    "start:prod": "npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
+    "start:dev": "SET NODE_ENV=development && npm run build && node ./dist/server.js",
+    "start:prod": "SET NODE_ENV=production && npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
     "stop:prod": "npx pm2 stop all"
   },
   "keywords": [],
@@ -17,12 +17,22 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "@types/cors": "^2.8.13",
+    "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/uuid": "^9.0.2",
     "argon2": "^0.31.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.0.0",
     "prisma-error-enum": "^0.1.3",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4",
     "zod-validation-error": "^1.3.1"
   },
