--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
     "prisma:clean": "rm -rf ./prisma",
     "prisma:setup": "npm run prisma:clean && npx prisma init && npx prisma db pull && npx prisma generate",
-    "start:dev": "SET NODE_ENV=development && npm run build && node ./dist/server.js",
-    "start:prod": "SET NODE_ENV=production && npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
+    "start:dev": "export NODE_ENV=development && npm run build && node ./dist/server.js",
+    "start:prod": "export NODE_ENV=production && npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
     "stop:prod": "npx pm2 stop all"
   },
   "keywords": [],
