--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
     "prisma:clean": "rm -rf ./prisma",
-    "prisma:setup": "npm run prisma:clean && npx prisma init && npx prisma db pull && npx prisma generate",
+    "prisma:setup": "npx prisma init && npx prisma db pull && npx prisma generate",
     "start:dev": "export NODE_ENV=development && npm run build && node ./dist/server.js",
     "start:prod": "export NODE_ENV=production && npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
     "stop:prod": "npx pm2 stop all"
@@ -16,7 +16,7 @@
   "author": "GEM Code - IT Solutions",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@types/cors": "^2.8.13",
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
@@ -31,7 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "prisma": "^5.0.0",
+    "prisma": "^5.2.0",
     "prisma-error-enum": "^0.1.3",
     "uuid": "^9.0.0",
     "zod": "^3.21.4",
