--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@prisma/client": "^5.2.0",
     "@types/cors": "^2.8.13",
     "@types/multer": "^1.4.7",
+    "@types/node-cron": "^3.0.8",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/uuid": "^9.0.2",
     "argon2": "^0.31.0",
     "cors": "^2.8.5",
+    "cron-time-generator": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.2.0",
