--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
-    "prisma:clean": "rm -rf ./prisma",
-    "prisma:setup": "npx prisma init && npx prisma db pull && npx prisma generate",
+    "prisma:setup": "npx prisma db pull && npx prisma generate",
     "start:dev": "export NODE_ENV=development && npm run build && node ./dist/server.js",
     "start:prod": "export NODE_ENV=production && npm run prisma:setup && npm run build && npx pm2 start ./dist/server.js -i 0",
     "stop:prod": "npx pm2 stop all"
@@ -30,6 +29,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "passport": "^0.6.0",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.5",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "ts-node": "^10.9.1",
