--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An API for GO EXPLORE",
   "main": "server.js",
   "scripts": {
+    "restart:prod": "pm2 stop all && npm run start:prod",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npx tsc -p ./tsconfig.json && npx tsc-alias -p ./tsconfig.json",
     "prisma:setup": "npx prisma db pull && npx prisma generate",
