--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.13",
     "@types/multer": "^1.4.7",
     "@types/node-cron": "^3.0.8",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/uuid": "^9.0.2",
@@ -33,6 +34,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.2.0",
